--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,10 @@
 <article class="about-content" [@revealAboutItems]="revealAbout">
 
-  <app-article-header
+  <!-- <app-article-header
     class="desktop-only"
     header="About"
     subheader="Bio and contact information">
-  </app-article-header>
+  </app-article-header> -->
 
   <section class="about-main about-item">
     <div class="secondary-content">
