--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 
-<div class="mobile-border"></div>
+<div class="main-border"></div>
 
 <main class="main-window" role="main">
   <router-outlet></router-outlet>
