--- a/src/app/work/work-frame/work-frame.component.html
+++ b/src/app/work/work-frame/work-frame.component.html
@@ -1,5 +1,5 @@
 <section class="work-frame">
-  <header class="subject-header desktop-only">
+  <!-- <header class="subject-header desktop-only">
     <div class="heading">
       Work
     </div>
@@ -9,7 +9,7 @@
         <span (click)="goBack()" class="back-text">Back to list</span>
       </div>
     </div>
-  </header>
+  </header> -->
 
   <router-outlet></router-outlet>
 
