--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,6 +16,7 @@
 @import './buttons';
 
 // Site components
+@import './main';
 @import './nav';
 @import './header-footer';
 @import './image-viewer';
