--- a/src/app/work/work-list/work-list.component.html
+++ b/src/app/work/work-list/work-list.component.html
@@ -1,11 +1,11 @@
 <!-- [@revealWorkItems]="revealWork" -->
 
 <article class="work-content">
-  <app-article-header
+  <!-- <app-article-header
     class="desktop-only work-list-item"
     header="Work"
     subheader="Projects with clients, companies, and schools">
-  </app-article-header>
+  </app-article-header> -->
 
   <div
     class="work-main" [@revealListItems]="revealList">
