--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,21 +1,11 @@
 <article class="about-content" [@revealAboutItems]="revealAbout">
 
-  <!-- <app-article-header
-    class="desktop-only"
-    header="About"
-    subheader="Bio and contact information">
-  </app-article-header> -->
-
   <section class="about-main about-item">
+
     <div class="secondary-content">
       <img class="self-image" src="../assets/images/about/self-image.jpg" alt="peter-cutler">
-      <section class="about-profile-contact-links">
-        <h2 class="contact-heading">Contact</h2>
-        <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
-        <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter-square"></a>
-        <a target="_blank" href="https://linkedin.com/in/petergcutler/" class="fab fa-linkedin"></a>
-      </section>
     </div>
+
     <div class="primary-content">
       <div class="bio">
         <p>
@@ -31,25 +21,39 @@
           You can find some of my work here</a>. Take a look and feel free to
           reach out.
         </p>
-
-        <section class="about-bio-contact-links">
-          <h2 class="contact-heading">Contact</h2>
-          <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
-          <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter-square"></a>
-          <a target="_blank" href="https://linkedin.com/in/petergcutler/" class="fab fa-linkedin"></a>
-        </section>
       </div>
     </div>
+
   </section>
 
+  <footer class="main-footer" role="contentinfo">
 
-
-  <footer class="main-footer about-item" role="contentinfo">
-    <div class="border-footer">
-      <span class="copyright-text">
-        &copy; Copyright 2018, Peter Cutler
+    <div *ngIf="longPage" class="scroll-to-top">
+      <span
+        pageScroll
+        href="#scrollTop"
+        class="scroll-button button-underline">
+        Back to Top
       </span>
     </div>
+
+    <!-- <div *ngIf="imageCredit" class="image-attribution">
+      <span>Thumbnail image by
+        <a target="_blank" href="{{imageCredit.artistSite}}">{{imageCredit.artist}}</a>
+        via <a target="_blank" href="{{imageCredit.source}}">Flickr</a>.</span>
+    </div> -->
+
+    <section class="page-bottom">
+      <span class="copyright-text">
+        &copy; Peter Cutler
+      </span>
+
+      <div class="contact-links">
+        <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter"></a>
+        <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
+        <a target="_blank" href="https://linkedin.com/in/petergcutler/" class="fab fa-linkedin"></a>
+      </div>
+    </section>
   </footer>
 
 </article>
