--- a/src/app/article-footer/article-footer.component.html
+++ b/src/app/article-footer/article-footer.component.html
@@ -1,7 +1,7 @@
 <footer class="main-footer" role="contentinfo">
 
   <div *ngIf="longPage" class="scroll-to-top">
-    <span 
+    <span
       pageScroll
       href="#scrollTop"
       class="scroll-button button-underline">
@@ -15,9 +15,15 @@
       via <a target="_blank" href="{{imageCredit.source}}">Flickr</a>.</span>
   </div> -->
 
-  <div class="border-footer">
+  <section class="page-bottom">
     <span class="copyright-text">
-      &copy; Copyright 2018, Peter Cutler
+      &copy; Peter Cutler
     </span>
-  </div>
+
+    <div class="contact-links">
+      <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter"></a>
+      <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
+      <a target="_blank" href="https://linkedin.com/in/petergcutler/" class="fab fa-linkedin"></a>
+    </div>
+  </section>
 </footer>
