--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -28,14 +28,14 @@
 
   <footer class="main-footer" role="contentinfo">
 
-    <div *ngIf="longPage" class="scroll-to-top">
+    <!-- <div *ngIf="longPage" class="scroll-to-top">
       <span
         pageScroll
         href="#scrollTop"
         class="scroll-button button-underline">
         Back to Top
       </span>
-    </div>
+    </div> -->
 
     <!-- <div *ngIf="imageCredit" class="image-attribution">
       <span>Thumbnail image by
