--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -45,7 +45,7 @@
 
     <section class="page-bottom">
       <span class="copyright-text">
-        &copy; Peter Cutler
+        &copy; 2018, Peter Cutler
       </span>
 
       <div class="contact-links">
