--- a/src/scss/_image-viewer.scss
+++ b/src/scss/_image-viewer.scss
@@ -3,15 +3,7 @@
   height: auto;
   cursor: zoom-in;
 
-  @include respond-to('medium') {
-    max-width: 30em;
-  }
-
-  @include respond-to($shift-nav-to-side) {
-    max-width: 100%;
-  }
-
-  @include respond-to('large') {
+  @include respond-to('marge') {
     max-width: 30em;
   }
 }
@@ -46,7 +38,7 @@
   .gallery-text {
     display: none;
 
-    @include respond-to('small') {
+    @include respond-to('tiny') {
       display: inline;
     }
 
@@ -57,7 +49,7 @@
     top: -3em;
     right: -1em;
 
-    @include respond-to('smallish') {
+    @include respond-to('smaller') {
       right: -2em;
       max-width: 15em;
     }
@@ -66,7 +58,7 @@
   .gallery-prompt {
     display: none;
 
-    @include respond-to('alarge') {
+    @include respond-to('large') {
       display: inline;
     }
   }
@@ -74,7 +66,7 @@
   .spacer {
     display: none;
 
-    @include respond-to('alarge') {
+    @include respond-to('large') {
       padding: 0 0.33em;
       display: inline;
     }
@@ -114,7 +106,7 @@
 .gallery-prompt {
   display: none;
 
-  @include respond-to('smallish') {
+  @include respond-to('smaller') {
     display: inline;
   }
 }
@@ -122,7 +114,7 @@
 .spacer {
   display: none;
 
-  @include respond-to('smallish') {
+  @include respond-to('smaller') {
     padding: 0 0.33em;
     display: inline;
   }
