--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -1,18 +1,32 @@
 .about-main {
   display: grid;
-  grid-gap: 2em;
-  padding-top: 2em;
+  grid-gap: 3em;
+  padding-top: 3em;
+  max-width: 26em;
+  margin: 0 auto;
 
-  @include respond-to('small') {
-    grid-template-columns: 2fr 3fr;
+  @include respond-to('marge') {
+    grid-template-columns: 1fr 3fr;
+    grid-gap: 4em;
+    margin: 0;
+    max-width: 54em;
+  }
+}
+
+.secondary-content {
+  margin: 0 auto;
+
+  @include respond-to('marge') {
+    margin: 0;
   }
 }
 
 .self-image {
-  width: 100%;
+  border-radius: 100%;
+  max-width: 150px;
 
   @include respond-to('marge') {
-    max-width: 300px;
+    max-width: 210px;
   }
 }
 
@@ -24,7 +38,8 @@
   padding-bottom: 1em;
 
   @include respond-to('marge') {
-    font-size: $large;
+    font-size: $normalarge;
+    line-height: 1.75em;
   }
 }
 
