--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,8 @@
 // External
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=Rubik');
+@import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // $fa-font-path : '~@fortawesome/fontawesome-free/webfonts';
 // @import '~@fortawesome/fontawesome-free/scss/fontawesome';
