header grid; cleanup

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,10 @@
 // Borders
 $border-thin: 1px;
 
+// Site widths
+$full-width: 54em;
+$half-width: 30em;
+
 // Media Queries
 $breakpoints: (
   'tiny': (min-width: 360px),
