--- a/src/app/work/work-header/work-header.component.html
+++ b/src/app/work/work-header/work-header.component.html
@@ -10,25 +10,27 @@
     </div>
   </section>
 
-  <section class="work-header-section">
-    <p class="work-tag-header">client</p>
-    <ul class="work-tags">
-      <li class="work-tag">{{work.client}}</li>
-    </ul>
-  </section>
+  <section class="work-header-row">
+    <section class="work-header-section">
+      <p class="work-tag-header">tags</p>
+      <ul class="work-tags">
+        <li class="work-tag" *ngFor="let tag of work.tags">{{tag}}</li>
+      </ul>
+    </section>
 
-  <section class="work-header-section">
-    <p *ngIf="work.team" class="work-tag-header">team</p>
-    <div *ngIf="work.team" class="work-tags" >
-      <p *ngFor="let name of work.team">{{name}}</p>
-    </div>
-  </section>
+    <section class="work-header-section">
+      <p *ngIf="work.team" class="work-tag-header">team</p>
+      <div *ngIf="work.team" class="work-tags" >
+        <p *ngFor="let name of work.team">{{name}}</p>
+      </div>
+    </section>
 
-  <section class="work-header-section">
-    <p class="work-tag-header">tags</p>
-    <ul class="work-tags">
-      <li class="work-tag" *ngFor="let tag of work.tags">{{tag}}</li>
-    </ul>
+    <section class="work-header-section">
+      <p class="work-tag-header">client</p>
+      <ul class="work-tags">
+        <li class="work-tag">{{work.client}}</li>
+      </ul>
+    </section>
   </section>
 
   <section class="work-header-section">
