--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -9,7 +9,7 @@
     grid-template-columns: 1fr 3fr;
     grid-gap: 4em;
     margin: 0;
-    max-width: 54em;
+    max-width: $full-width;
   }
 }
 
