cleanup component relationships

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-nav></app-nav>
 
-<div class="main-border"></div>
-
 <main class="main-window" role="main">
   <router-outlet></router-outlet>
 </main>
+
+<app-article-footer></app-article-footer>
