--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -4,8 +4,9 @@ html {
 
 .about-content,
 .work-content,
-.work-frame,
-.main-nav {
+.work-entry,
+.main-nav,
+.main-footer {
   padding: 0 2em;
   max-width: $full-width;
   margin: 0 auto;
