add animation to work-sections

--- a/src/app/work/work-header/work-header.component.html
+++ b/src/app/work/work-header/work-header.component.html
@@ -1,4 +1,4 @@
-<header class="work-header" id="scrollTop">
+<header class="work-header" id="scrollTop" ngsReveal>
 
   <section class="work-titling work-header-section" >
     <h1 class="work-title">
