--- a/src/app/work/work-items/crowdskout-segmenting/crowdskout-segmenting.component.html
+++ b/src/app/work/work-items/crowdskout-segmenting/crowdskout-segmenting.component.html
@@ -6,7 +6,7 @@
     </p>
   </app-work-header>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       Crowdskout Profiles
     </h2>
@@ -27,7 +27,7 @@
     </p>
   </section>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       The Segmenting Feature
     </h2>
