--- a/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
+++ b/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
@@ -6,7 +6,7 @@
     </p>
   </app-work-header>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       VR Applications
     </h2>
@@ -38,7 +38,7 @@
     </div>
   </section>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h3 class="work-body-h3">
       Platform and Application On-boarding
     </h3>
@@ -47,7 +47,7 @@
     </p>
   </section>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       Heuristic Evaluation
     </h2>
@@ -73,7 +73,7 @@
     </ul>
   </section>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       Research Planning
     </h2>
@@ -119,7 +119,7 @@
     </p>
   </section>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       Running the Usability Study
     </h2>
@@ -155,7 +155,7 @@
     </p>
   </section>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       Analysis and Organizing Findings
     </h2>
@@ -171,7 +171,7 @@
     </p>
   </section>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       Presenting and Reporting Out
     </h2>
