--- a/src/app/work/work-items/uw-yarn/uw-yarn.component.html
+++ b/src/app/work/work-items/uw-yarn/uw-yarn.component.html
@@ -9,7 +9,7 @@
     </p>
   </app-work-header>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       Understanding the Research and the App
     </h2>
@@ -34,7 +34,7 @@
     </p>
   </section>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       Research Planning
     </h2>
@@ -63,7 +63,7 @@
     </ul>
   </section>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       Running the Study, Surveying, and Interviewing
     </h2>
@@ -92,7 +92,7 @@
     </ul>
   </section>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h3 class="work-body-h3">
       Focusing our Interviews around our Research Questions
     </h3>
@@ -112,7 +112,7 @@
     </ul>
   </section>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       Analyzing our Findings
     </h2>
