--- a/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
+++ b/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
@@ -6,7 +6,7 @@
     </p>
   </app-work-header>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h3 class="work-body-h3">
       AT&T People Planet Possibilities
     </h3>
@@ -27,7 +27,7 @@
     </div>
   </section>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h3 class="work-body-h3">
       Motion Design Practices
     </h3>
