--- a/src/scss/_work-body.scss
+++ b/src/scss/_work-body.scss
@@ -68,7 +68,7 @@
   position: relative;
   font-family: $heading-font;
   font-size: $prettybig;
-  font-weight: bold;
+  font-weight: normal;
   color: $main-header-black;
 
   &::after {
