--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,7 +20,7 @@
 @import './article-footer';
 @import './image-viewer';
 @import './work-header';
-@import './work-entry';
+@import './work-body';
 
 // Pages
 @import './dashboard';
