--- a/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
+++ b/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
@@ -6,7 +6,7 @@
     </p>
   </app-work-header>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       Profile Fields Tied to Custom Questions
     </h2>
