--- a/src/app/work/work-items/vox-global-att-csr/vox-global-att-csr.component.html
+++ b/src/app/work/work-items/vox-global-att-csr/vox-global-att-csr.component.html
@@ -6,7 +6,7 @@
     </p>
   </app-work-header>
 
-  <section class="work-section">
+  <section class="work-section" ngsReveal>
     <h2 class="work-body-h2">
       Stakeholder Interviews
     </h2>
