--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,12 +1,12 @@
 <article class="about-content" [@revealAboutItems]="revealAbout">
 
-  <section class="about-main about-item">
+  <section class="about-main">
 
-    <div class="secondary-content">
+    <div class="secondary-content about-item">
       <img class="self-image" src="../assets/images/about/self-image.jpg" alt="peter-cutler">
     </div>
 
-    <div class="primary-content">
+    <div class="primary-content about-item">
       <div class="bio">
         <p>
           Hey, I'm Peter Cutler, and I'm a Master's student living in Seattle.
